Changes in version 0.99.0 (2021-04-22)
+ Submitted to Bioconductor

Changes in version 0.99.1 (2021-04-26)
+ Remove Git files refused by BiocCheckGitClone.
+ Use CHECK_RENVIRON in local tests.
+ Correct condition in BiodbEntryFields::getRealName() that did not pass check.
+ Add all doc files man/*.Rd for BiocCheck run on http://bioconductor.org.

Changes in version 0.99.2 (2021-04-27)
+ Switch to MassBank extract for testing MassCsvFile and MassSqlite connectors.

Changes in version 0.99.3 (2021-04-27)
+ Added "biodb" as watched tag on my profile on support site https://support.bioconductor.org/.

Changes in version 0.99.4 (2021-04-27)
+ Move long tests to separate directory "long".

Changes in version 0.99.5 (2021-04-27)
+ Add missing parameters documentation for runGenericTests().

Changes in version 0.99.6 (2021-04-27)
+ Rebuilding doc.

Changes in version 0.99.7 (2021-04-27)
+ Renamed Biodb class into BiodbMain in order to avoid "Rd warning: Previous alias or file overwritten by alias: biodb" on Windows platform.
+ Implement newInst() global function for creating new BiodbMain instance.

Changes in version 0.99.8 (2021-05-06)
+ Correct template travis.yml for extensions: missing deps install, run all checks.
+ Improve template Makefile for extensions.
+ Add missing test-cpp.R template file for running C++ tests from testthat.
+ Limit by default the entries to test to one entry inside generic tests.
+ Improve vignettes.
+ Rename default vignette into "biodb.Rmd".

Changes in version 0.99.9 (2021-05-07)
+ Solving some NOTES from BiocCheck.