@@ -13,7 +13,7 @@
 #'
 #' @examples
 #' # Create an instance
-#' prg <- biodb::Progress(msg='Processing data.', total=10)
+#' prg <- biodb::Progress$new(msg='Processing data.', total=10)
 #'
 #' # Processing
 #' for (i in seq_len(10)) {
