@@ -5,14 +5,12 @@
 #'
 #' Matches peaks between two spectra.
 #'
-#' @param x        sorted M/Z values (ascending order) of input spectrum (no
-#' NA).
-#' @param y        sorted M/Z values (ascending order) of reference spectrum
-#' (no NA).
-#' @param xidx     indices of the M/Z peaks of x, taken from the original
-#' spectrum ordered in decreasing intensity values.
-#' @param yidx     indices of the M/Z peaks of y, taken from the original
-#' spectrum ordered in decreasing intensity values.
+#' @param x        sorted M/Z values (ascending order) of input spectrum (no NA).
+#' @param y        sorted M/Z values (ascending order) of reference spectrum (no NA).
+#' @param xidx     indices of the M/Z peaks of x, taken from the original spectrum 
+#'          ordered in decreasing intensity values.
+#' @param yidx     indices of the M/Z peaks of y, taken from the original spectrum 
+#'          ordered in decreasing intensity values.
 #' @param xolength ???
 #' @param dppm     ???
 #' @param dmz      ???
