@@ -36,3 +36,4 @@ Changes in version 0.99.8 (2021-05-06)
 
 Changes in version 0.99.9 (2021-05-07)
 + Solving some NOTES from BiocCheck.
++ Correct example in Progress class.
